--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									
 									<h2><a href="https://github.com/Matchatribhuvan/price-optimization-and-analysis/commit/496a9a5ce65311068ff2e8b4975e1eb04bcc23ad">Dynamic price Optimization<br />
 									</a></h2>
-									<p>In this project we demontrate the pricing of produts time to time based sales and competition data</p>
+									<p>In this project we demonstrate the pricing of produts time to time based on sales and market competition data</p>
 								</header>
 								<a href="https://github.com/Matchatribhuvan/price-optimization-and-analysis/commit/496a9a5ce65311068ff2e8b4975e1eb04bcc23ad" class="image main"><img src="images/pricing.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -105,7 +105,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/Matchatribhuvan/covid-19-EDA/blob/main/README.md?plain=1">Covid-19 EDA(Eploratory Data Analysis)<br />
+										<h2><a href="https://github.com/Matchatribhuvan/covid-19-EDA/blob/main/README.md?plain=1">Covid-19 EDA(Epxloratory Data Analysis)<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Matchatribhuvan/covid-19-EDA/blob/main/README.md?plain=1" class="image fit"><img src="images/covid.jpg" alt="" /></a>
