--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/Matchatribhuvan/covid-19-EDA/blob/main/README.md?plain=1">Covid-19 EDA(Epxloratory Data Analysis)<br />
+										<h2><a href="https://github.com/Matchatribhuvan/covid-19-EDA/blob/main/README.md?plain=1">Covid-19 EDA(Exploratory Data Analysis)<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Matchatribhuvan/covid-19-EDA/blob/main/README.md?plain=1" class="image fit"><img src="images/covid.jpg" alt="" /></a>
